# diviconto

./: .gitignore  Makefile  README.md  buildozer.spec  demo  divc  divui  main.py  pyproject.toml  requirements-ui.txt  run-tests
diviconto/: __init__.py  __main__.py  admin.py  cli.py  core.py  db.py  i18n.py  models.py  sync.py  sync_config.py
docs/: ARCHITETTURA.md  PIANO.md
src/: __main__.py  balance.py  cli.py  db.py  money.py
supabase/: schema.sql
tests/: test_admin.py  test_cli.py  test_core.py  test_i18n.py  test_money.py  test_sync.py
tools/: make_icon.py  supabase_admin.py
ui/: __init__.py  app.py  diviconto.kv  widgets.py
ui/screens/: __init__.py  auth.py  expense_form.py  settings.py  trip_detail.py  trips.py
